k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: spring-api
  namespace: of-fiap

spec:
  replicas: 2

  selector:
    matchLabels:
      app: spring-api

  template:
    metadata:
      labels:
        app: spring-api

    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:

        - name: spring-api

          image: IMAGE_NAME

          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: management

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"

            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:

            httpGet:
              path: /actuator/health/readiness
              port: 8081

            initialDelaySeconds: 240
            periodSeconds: 40

          livenessProbe:

            httpGet:
              path: /actuator/health/liveness
              port: 8081

            initialDelaySeconds: 360
            periodSeconds: 40
