k8s/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: spring-api
  namespace: of-fiap

spec:
  selector:
    app: spring-api

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
