k8s/metrics-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: spring-api-metrics
  namespace: of-fiap
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8081"

spec:
  selector:
    app: spring-api

  ports:
    - name: management
      port: 8081
      targetPort: 8081

  type: ClusterIP
